2001-05-22  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_d): close the flow unconditionaly for dd but
	only change the indent level if we are in a list.

	* htmltokenizer.c (end_tag): only discard the first LF in an
	opening tag if it is a pre or textarea element (fixes
	http://bugzilla.helixcode.com/show_bug.cgi?id=2093)
	
2001-05-22  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-tablecell.c (html_engine_table_cell_set_valign):
	new method
	(html_engine_table_cell_set_halign): ditto

	* htmltablecell.c (html_table_cell_init): changed initial
	alignment

	* htmlengine-edit-tablecell.c
	(html_engine_table_cell_set_bg_color): new method
	(html_engine_table_cell_set_bg_pixmap): ditto
	(html_engine_get_table_cell): ditto

2001-05-21  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_table_set_align): updated
	to use ClueAligned
	(html_engine_table_set_width): new function

2001-05-18  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (parse_table): added support for align=left/right
	for tables

	* htmlengine-edit-table.c (html_engine_table_set_align): new
	function

2001-05-18  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_d): fix dt rendering so that it always
	splits the flow, even outside of dl, this is "feature" of
	netscape/mozilla is used in several prominant places like bonsai
	(fixes http://bugzilla.helixcode.com/show_bug.cgi?id=2043).

2001-05-17  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_f): fix color parsing so that it pushes the
	current color rather than black if no color is specified (fixes
	http://bugzilla.ximian.com/show_bug.cgi?id=2911).

2001-05-17  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_table_set_bg_color): alloc
	space for new color if needed

	* htmltablecell.h: removed padding

	* htmlengine-edit-table.c (new_cell): don't set cell background
	from table (it's resolved dynamically now)